--- a/e-commerce-micro/src/main/webapp/index.html
+++ b/e-commerce-micro/src/main/webapp/index.html
@@ -7,14 +7,15 @@
 <body>
     <h1>Welcome to E-Commerce Micro</h1>
     <ul>
-        <li><a href="login.xhtml">Login</a></li>
+        <li><a href="api/auth/login">Login</a></li>
+        <li><a href="api/auth/logout">Logout</a></li>
+        <li><a href="api/auth/whoami">Who Am I (JWT Info)</a></li>
         <li><a href="customer.xhtml">Customers</a></li>
         <li><a href="order.xhtml">Orders</a></li>
         <li><a href="orderitem.xhtml">Order Items</a></li>
         <li><a href="product.xhtml">Products</a></li>
         <li><a href="review.xhtml">Reviews</a></li>
         <li><a href="instance-info.xhtml">Instance Info</a></li>
-        <li><a href="api/whoami">Who Am I (JWT Info)</a></li>
     </ul>
 </body>
 </html>
