use custom jwt auth, use microprofile config, use jul

--- a/e-commerce-micro/src/main/webapp/jsf/whoami.xhtml
+++ b/e-commerce-micro/src/main/webapp/jsf/whoami.xhtml
@@ -10,6 +10,6 @@
         <h:outputLabel value="Username:"/>
         <h:outputText value="#{whoAmIBean.username}"/>
     </h:panelGrid>
-    <h:link value="Back to Home" outcome="index.xhtml"/>
+    <a href="/index.html">Back to Home</a>
 </h:body>
 </html>
