--- a/e-commerce-micro/src/main/webapp/jsf/instance-info.xhtml
+++ b/e-commerce-micro/src/main/webapp/jsf/instance-info.xhtml
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:p="http://primefaces.org/ui"
+    xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Payara Instance Info</title>
 </h:head>
 <h:body>
-    <h:panelGrid columns="2" style="margin-top:2em;">
-        <h:outputLabel value="Hostname:" />
-        <h:outputText value="#{instanceInfoBean.hostname}" />
-        <h:outputLabel value="IP Address:" />
-        <h:outputText value="#{instanceInfoBean.ipAddress}" />
-        <h:outputLabel value="Session ID:" />
-        <h:outputText value="#{instanceInfoBean.sessionId}" />
-        <h:outputLabel value="Session Created:" />
-        <h:outputText value="#{instanceInfoBean.sessionCreationTime}" />
-        <h:outputLabel value="Session Request Count:" />
-        <h:outputText value="#{instanceInfoBean.sessionRequestCount}" />
-    </h:panelGrid>
+    <p:card style="max-width:500px;margin:2em auto;">
+        <f:facet name="title">
+            <span class="pi pi-server" style="margin-right:8px;"></span>Payara Instance Info
+        </f:facet>
+        <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" style="margin-top:1em;">
+            <p:outputLabel value="Hostname:" />
+            <p:outputLabel value="#{instanceInfoBean.hostname}" />
+            <p:outputLabel value="IP Address:" />
+            <p:outputLabel value="#{instanceInfoBean.ipAddress}" />
+            <p:outputLabel value="Session ID:" />
+            <p:outputLabel value="#{instanceInfoBean.sessionId}" />
+            <p:outputLabel value="Session Created:" />
+            <p:outputLabel value="#{instanceInfoBean.sessionCreationTime}" />
+            <p:outputLabel value="Session Request Count:" />
+            <p:outputLabel value="#{instanceInfoBean.sessionRequestCount}" />
+        </p:panelGrid>
+    </p:card>
 </h:body>
 
 </html>
