--- a/e-commerce-micro/src/main/webapp/jsf/orderitem.xhtml
+++ b/e-commerce-micro/src/main/webapp/jsf/orderitem.xhtml
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:p="http://primefaces.org/ui"
     xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Order Item CRUD</title>
 </h:head>
 <h:body>
-    <h:form>
-        <h:panelGrid columns="2">
-            <h:outputLabel value="Order ID:" />
-            <h:inputText value="#{orderItemBean.orderItem.order.orderId}" />
-            <h:outputLabel value="Product ID:" />
-            <h:inputText value="#{orderItemBean.orderItem.product.productId}" />
-            <h:outputLabel value="Quantity:" />
-            <h:inputText value="#{orderItemBean.orderItem.quantity}" />
-            <h:outputLabel value="Price:" />
-            <h:inputText value="#{orderItemBean.orderItem.price}" />
-        </h:panelGrid>
-        <h:commandButton value="Save" action="#{orderItemBean.save}" />
-    </h:form>
-    <h:form>
-        <h:dataTable value="#{orderItemBean.orderItems}" var="oi" border="1">
-            <h:column>
-                <f:facet name="header">OrderItem ID</f:facet>
-                #{oi.orderItemId}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Order ID</f:facet>
-                #{oi.order.orderId}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Product ID</f:facet>
-                #{oi.product.productId}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Quantity</f:facet>
-                #{oi.quantity}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Price</f:facet>
-                #{oi.price}
-            </h:column>
-            <h:column>
-                <h:commandButton value="Edit" action="#{orderItemBean.edit(oi)}" />
-                <h:commandButton value="Delete" action="#{orderItemBean.delete(oi)}" />
-            </h:column>
-        </h:dataTable>
-    </h:form>
+    <p:card style="max-width:700px;margin:2em auto;">
+        <f:facet name="title">
+            <span class="pi pi-list" style="margin-right:8px;"></span>Order Item CRUD
+        </f:facet>
+        <h:form>
+            <p:messages id="errors" globalOnly="true" styleClass="ui-messages-error" closable="true" />
+            <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" style="margin-bottom:1em;">
+                <p:outputLabel value="Order ID:" />
+                <p:inputText value="#{orderItemBean.orderItem.order.orderId}" />
+                <p:outputLabel value="Product ID:" />
+                <p:inputText value="#{orderItemBean.orderItem.product.productId}" />
+                <p:outputLabel value="Quantity:" />
+                <p:inputText value="#{orderItemBean.orderItem.quantity}" />
+                <p:outputLabel value="Price:" />
+                <p:inputText value="#{orderItemBean.orderItem.price}" />
+            </p:panelGrid>
+            <p:commandButton value="Save" icon="pi pi-save" action="#{orderItemBean.save}" styleClass="ui-button-success" update="errors" />
+        </h:form>
+        <h:form>
+            <p:dataTable value="#{orderItemBean.orderItems}" var="oi" style="margin-top:2em;" paginator="true" rows="10"
+                responsiveLayout="scroll">
+                <p:column headerText="OrderItem ID">
+                    #{oi.orderItemId}
+                </p:column>
+                <p:column headerText="Order ID">
+                    #{oi.order.orderId}
+                </p:column>
+                <p:column headerText="Product ID">
+                    #{oi.product.productId}
+                </p:column>
+                <p:column headerText="Quantity">
+                    #{oi.quantity}
+                </p:column>
+                <p:column headerText="Price">
+                    #{oi.price}
+                </p:column>
+                <p:column headerText="Actions">
+                    <p:commandButton value="Edit" icon="pi pi-pencil" action="#{orderItemBean.edit(oi)}"
+                        styleClass="ui-button-info" update="errors" />
+                    <p:commandButton value="Delete" icon="pi pi-trash" action="#{orderItemBean.delete(oi)}"
+                        styleClass="ui-button-danger" update="errors" />
+                </p:column>
+            </p:dataTable>
+        </h:form>
+    </p:card>
 </h:body>
 
 </html>
