--- a/e-commerce-micro/src/main/webapp/jsf/product.xhtml
+++ b/e-commerce-micro/src/main/webapp/jsf/product.xhtml
@@ -1,45 +1,51 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:p="http://primefaces.org/ui"
     xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Product CRUD</title>
 </h:head>
 <h:body>
-    <h:form>
-        <h:panelGrid columns="2">
-            <h:outputLabel value="Name:"/>
-            <h:inputText value="#{productBean.product.name}"/>
-            <h:outputLabel value="Description:"/>
-            <h:inputText value="#{productBean.product.description}"/>
-            <h:outputLabel value="Price:"/>
-            <h:inputText value="#{productBean.product.price}"/>
-        </h:panelGrid>
-        <h:commandButton value="Save" action="#{productBean.save}"/>
-    </h:form>
-    <h:form>
-        <h:dataTable value="#{productBean.products}" var="p" border="1">
-            <h:column>
-                <f:facet name="header">Product ID</f:facet>
-                #{p.productId}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Name</f:facet>
-                #{p.name}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Description</f:facet>
-                #{p.description}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Price</f:facet>
-                #{p.price}
-            </h:column>
-            <h:column>
-                <h:commandButton value="Edit" action="#{productBean.edit(p)}"/>
-                <h:commandButton value="Delete" action="#{productBean.delete(p)}"/>
-            </h:column>
-        </h:dataTable>
-    </h:form>
+    <p:card style="max-width:700px;margin:2em auto;">
+        <f:facet name="title">
+            <span class="pi pi-box" style="margin-right:8px;"></span>Product CRUD
+        </f:facet>
+        <h:form>
+            <p:messages id="errors" globalOnly="true" styleClass="ui-messages-error" closable="true" />
+            <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" style="margin-bottom:1em;">
+                <p:outputLabel value="Name:" />
+                <p:inputText value="#{productBean.product.name}" />
+                <p:outputLabel value="Description:" />
+                <p:inputText value="#{productBean.product.description}" />
+                <p:outputLabel value="Price:" />
+                <p:inputText value="#{productBean.product.price}" />
+            </p:panelGrid>
+            <p:commandButton value="Save" icon="pi pi-save" action="#{productBean.save}" styleClass="ui-button-success"
+                update="errors" />
+        </h:form>
+        <h:form>
+            <p:dataTable value="#{productBean.products}" var="p" style="margin-top:2em;" paginator="true" rows="10"
+                responsiveLayout="scroll">
+                <p:column headerText="Product ID">
+                    #{p.productId}
+                </p:column>
+                <p:column headerText="Name">
+                    #{p.name}
+                </p:column>
+                <p:column headerText="Description">
+                    #{p.description}
+                </p:column>
+                <p:column headerText="Price">
+                    #{p.price}
+                </p:column>
+                <p:column headerText="Actions">
+                    <p:commandButton value="Edit" icon="pi pi-pencil" action="#{productBean.edit(p)}"
+                        styleClass="ui-button-info" update="errors" />
+                    <p:commandButton value="Delete" icon="pi pi-trash" action="#{productBean.delete(p)}"
+                        styleClass="ui-button-danger" update="errors" />
+                </p:column>
+            </p:dataTable>
+        </h:form>
+    </p:card>
 </h:body>
+
 </html>
