--- a/e-commerce-micro/src/main/webapp/jsf/review.xhtml
+++ b/e-commerce-micro/src/main/webapp/jsf/review.xhtml
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:p="http://primefaces.org/ui"
     xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Review CRUD</title>
 </h:head>
 <h:body>
-    <h:form>
-        <h:panelGrid columns="2">
-            <h:outputLabel value="Product ID:" />
-            <h:inputText value="#{reviewBean.review.product.productId}" />
-            <h:outputLabel value="Customer ID:" />
-            <h:inputText value="#{reviewBean.review.customer.customerId}" />
-            <h:outputLabel value="Rating:" />
-            <h:inputText value="#{reviewBean.review.rating}" />
-            <h:outputLabel value="Comment:" />
-            <h:inputText value="#{reviewBean.review.comment}" />
-        </h:panelGrid>
-        <h:commandButton value="Save" action="#{reviewBean.save}" />
-    </h:form>
-    <h:form>
-        <h:dataTable value="#{reviewBean.reviews}" var="r" border="1">
-            <h:column>
-                <f:facet name="header">Review ID</f:facet>
-                #{r.reviewId}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Product ID</f:facet>
-                #{r.product.productId}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Customer ID</f:facet>
-                #{r.customer.customerId}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Rating</f:facet>
-                #{r.rating}
-            </h:column>
-            <h:column>
-                <f:facet name="header">Comment</f:facet>
-                #{r.comment}
-            </h:column>
-            <h:column>
-                <h:commandButton value="Edit" action="#{reviewBean.edit(r)}" />
-                <h:commandButton value="Delete" action="#{reviewBean.delete(r)}" />
-            </h:column>
-        </h:dataTable>
-    </h:form>
+    <p:card style="max-width:700px;margin:2em auto;">
+        <f:facet name="title">
+            <span class="pi pi-comments" style="margin-right:8px;"></span>Review CRUD
+        </f:facet>
+        <h:form>
+            <p:messages id="errors" globalOnly="true" styleClass="ui-messages-error" closable="true" />
+            <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" style="margin-bottom:1em;">
+                <p:outputLabel value="Product ID:" />
+                <p:inputText value="#{reviewBean.review.product.productId}" />
+                <p:outputLabel value="Customer ID:" />
+                <p:inputText value="#{reviewBean.review.customer.customerId}" />
+                <p:outputLabel value="Rating:" />
+                <p:inputText value="#{reviewBean.review.rating}" />
+                <p:outputLabel value="Comment:" />
+                <p:inputText value="#{reviewBean.review.comment}" />
+            </p:panelGrid>
+            <p:commandButton value="Save" icon="pi pi-save" action="#{reviewBean.save}" styleClass="ui-button-success"
+                update="errors" />
+        </h:form>
+        <h:form>
+            <p:dataTable value="#{reviewBean.reviews}" var="r" style="margin-top:2em;" paginator="true" rows="10"
+                responsiveLayout="scroll">
+                <p:column headerText="Review ID">
+                    #{r.reviewId}
+                </p:column>
+                <p:column headerText="Product ID">
+                    #{r.product.productId}
+                </p:column>
+                <p:column headerText="Customer ID">
+                    #{r.customer.customerId}
+                </p:column>
+                <p:column headerText="Rating">
+                    #{r.rating}
+                </p:column>
+                <p:column headerText="Comment">
+                    #{r.comment}
+                </p:column>
+                <p:column headerText="Actions">
+                    <p:commandButton value="Edit" icon="pi pi-pencil" action="#{reviewBean.edit(r)}"
+                        styleClass="ui-button-info" update="errors" />
+                    <p:commandButton value="Delete" icon="pi pi-trash" action="#{reviewBean.delete(r)}"
+                        styleClass="ui-button-danger" update="errors" />
+                </p:column>
+            </p:dataTable>
+        </h:form>
+    </p:card>
 </h:body>
 
 </html>
