--- a/e-commerce-micro/src/main/webapp/jsf/order.xhtml
+++ b/e-commerce-micro/src/main/webapp/jsf/order.xhtml
@@ -10,20 +10,20 @@
             <span class="pi pi-shopping-cart" style="margin-right:8px;"></span>Order CRUD
         </f:facet>
         <p:messages id="errors" globalOnly="true" styleClass="ui-messages-error" closable="true" />
-        <h:form>
+        <h:form id="dataInput">
             <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" style="margin-bottom:1em;">
                 <p:outputLabel value="Customer ID:" />
                 <p:inputText value="#{orderBean.order.customerId}" />
                 <p:outputLabel value="Order Date:" />
-                <p:inputText value="#{orderBean.order.orderDate}" />
+                <p:datePicker value="#{orderBean.order.orderDate}" pattern="yyyy-MM-dd" showIcon="true" />
                 <p:outputLabel value="Total Amount:" />
                 <p:inputText value="#{orderBean.order.totalAmount}" />
             </p:panelGrid>
             <p:commandButton value="Save" icon="pi pi-save" action="#{orderBean.save}" styleClass="ui-button-success"
-                update="errors dataTable" />
+                update="errors dataTable dataInput" />
         </h:form>
-        <h:form>
-            <p:dataTable id="dataTable" value="#{orderBean.orders}" var="o" style="margin-top:2em;" paginator="true" rows="10"
+        <h:form id="dataTable">
+            <p:dataTable value="#{orderBean.orders}" var="o" style="margin-top:2em;" paginator="true" rows="10"
                 responsiveLayout="scroll">
                 <p:column headerText="Order ID">
                     #{o.orderId}
