refactor payara micro services, refactor angular customer component

--- a/e-commerce-micro/src/main/webapp/jsf/customer.xhtml
+++ b/e-commerce-micro/src/main/webapp/jsf/customer.xhtml
@@ -9,7 +9,7 @@
         <f:facet name="title">
             <span class="pi pi-users" style="margin-right:8px;"></span>Customer CRUD
         </f:facet>
-        <p:messages id="errors" globalOnly="true" styleClass="ui-messages-error" closable="true" />
+        <p:messages id="errors" globalOnly="true" styleClass="ui-messages-error" closable="true" showDetail="true" />
         <h:form id="dataInput">
             <p:panelGrid columns="2" styleClass="ui-panelgrid-blank" style="margin-bottom:1em;">
                 <p:outputLabel value="Name:" />
