--- a/e-commerce-web/src/main/webapp/index.html
+++ b/e-commerce-web/src/main/webapp/index.html
@@ -1,22 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>E-Commerce Micro - Home</title>
+    <meta http-equiv="refresh" content="0; url=jsf/index.xhtml" />
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>Welcome to E-Commerce Micro</h1>
-    <ul>
-        <li><a href="login">Login</a></li>
-        <li><a href="logout">Logout</a></li>
-        <li><a href="api/auth/whoami">Who Am I (REST)</a></li>
-        <li><a href="jsf/whoami.xhtml">Who Am I (JSF)</a></li>
-        <li><a href="jsf/customer.xhtml">Customers</a></li>
-        <li><a href="jsf/order.xhtml">Orders</a></li>
-        <li><a href="jsf/orderitem.xhtml">Order Items</a></li>
-        <li><a href="jsf/product.xhtml">Products</a></li>
-        <li><a href="jsf/review.xhtml">Reviews</a></li>
-        <li><a href="jsf/instance-info.xhtml">Instance Info</a></li>
-    </ul>
+    <p>If you are not redirected automatically, <a href="jsf/index.xhtml">click here</a>.</p>
 </body>
 </html>
